--- a/css/reveal.css
+++ b/css/reveal.css
@@ -928,7 +928,7 @@ body {
  *********************************************/
 .reveal.rtl .slides, .reveal.rtl .slides h1, .reveal.rtl .slides h2, .reveal.rtl .slides h3, .reveal.rtl .slides h4, .reveal.rtl .slides h5, .reveal.rtl .slides h6 {
   direction: rtl;
-  font-family: sans-serif; }
+  font-family: 'Krub', sans-serif;; }
 
 .reveal.rtl pre, .reveal.rtl code {
   direction: ltr; }
